Add hlink script. Misc cleanup.